TiffPyramidMetadata: fixing bug in imageToLayer, better logic: all pyramid layers must be tiled